...
            },
        )
    }
}

const val TAG_SHEET = "br_sheet"
const val TAG_NEW = "br_new"
const val TAG_REMOTE = "br_remote"
const val TAG_BRANCH = "br_branch_"
const val TAG_PULL = "br_pull_"
const val TAG_MENU_MERGE = "br_menu_merge"

